# pong

./: .gitignore  .pre-commit-config.yaml  CMakeHelpers.cmake  CMakeLists.txt  README.md  toolchain.py
.github/workflows/: build-linux.yml  build-release.yml  build-windows.yml  release.yml
sandbox/: CMakeLists.txt
sandbox/src/: main.c
src/: main.c
src/engine/: engine.c  engine.h  update_context.h
src/game/: game.c  game.h  screen.h  screen_stack.c  screen_stack.h  state.c  state.h
src/game/screens/: gameplay.c  gameplay.h
src/game/states/: about.c  about.h  gameplay.c  gameplay.h  intro.c  intro.h  main_menu.c  main_menu.h  test.c  test.h
src/system/: debug.h  defines.h  logging.c  logging.h  memory.h  strid.c  strid.h
src/system/_platform/linux/: debug.c  memory.c
src/system/_platform/windows/: debug.c  memory.c
